--- a/app/frontend/服务器.md
+++ b/app/frontend/服务器.md
@@ -1,1 +1,6 @@
-我们将使用 Go 语言编写小程序后端，其资源占用率低、运行性能高的特点对较低配的服务器也非常友好，我们可以购买一个最低配的[腾讯云轻量服务器](https://url.cn/GjP63TLp)，后面可以根据业务的实际需要弹性扩展。
+# 服务器
+
+我们将使用 Go 语言编写小程序后端，其资源占用率低、运行性能高的特点让它对低配的服务器也非常友好，我们可以购买一个最低配的[腾讯云轻量应用服务器](https://url.cn/GjP63TLp)，以后可根据业务的实际需要弹性扩展。
+
+
+
