--- a/app/frontend/微信小程序.md
+++ b/app/frontend/微信小程序.md
@@ -1,2 +1,25 @@
 # 微信小程序
 
+## 更多
+
+- [RequestTask](https://developers.weixin.qq.com/miniprogram/dev/api/network/request/wx.request.html)
+- [UpdateManager](https://developers.weixin.qq.com/miniprogram/dev/api/base/update/UpdateManager.html)
+- [UploadTask](https://developers.weixin.qq.com/miniprogram/dev/api/network/upload/wx.uploadFile.html)
+- [picker](https://developers.weixin.qq.com/miniprogram/dev/component/picker.html)
+- [swiper](https://developers.weixin.qq.com/miniprogram/dev/component/swiper.html)
+- [wx.chooseMedia(Object object)](https://developers.weixin.qq.com/miniprogram/dev/api/media/video/wx.chooseMedia.html)
+- [wx.makePhoneCall(Object object)](https://developers.weixin.qq.com/miniprogram/dev/api/device/phone/wx.makePhoneCall.html)
+- [wx.previewImage(Object object)](https://developers.weixin.qq.com/miniprogram/dev/api/media/image/wx.previewImage.html)
+- [wx.shareAppMessage(Object object)](https://developers.weixin.qq.com/minigame/dev/api/share/wx.shareAppMessage.html)
+- [wx.showActionSheet(Object object)](https://developers.weixin.qq.com/miniprogram/dev/api/ui/interaction/wx.showActionSheet.html)
+- [wx.showModal(Object object)](https://developers.weixin.qq.com/miniprogram/dev/api/ui/interaction/wx.showModal.html)
+- [wx.showToast(Object object)](https://developers.weixin.qq.com/miniprogram/dev/api/ui/interaction/wx.showToast.html)
+- [头像昵称填写](https://developers.weixin.qq.com/miniprogram/dev/framework/open-ability/userProfile.html)
+- [客服消息](https://developers.weixin.qq.com/miniprogram/dev/framework/open-ability/customer-message/customer-message.html)
+- [小程序登录](https://developers.weixin.qq.com/doc/oplatform/Third-party_Platforms/2.0/api/others/WeChat_login.html)
+- [小程序订阅消息](https://developers.weixin.qq.com/miniprogram/dev/framework/open-ability/subscribe-message.html#%E8%AE%A2%E9%98%85%E6%B6%88%E6%81%AF%E8%AF%AD%E9%9F%B3%E6%8F%90%E9%86%92)
+- [小程序配置](https://developers.weixin.qq.com/miniprogram/dev/framework/config.html)
+- [打开 App](https://developers.weixin.qq.com/miniprogram/dev/framework/open-ability/launchApp.html)
+- [自定义组件](https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/)
+- [转发](https://developers.weixin.qq.com/miniprogram/dev/framework/open-ability/share.html)
+- [页面配置](https://developers.weixin.qq.com/miniprogram/dev/reference/configuration/page.html)
